--- a/templates/booking.html
+++ b/templates/booking.html
@@ -7,10 +7,12 @@
     <body>
         <h2>{{competition['name']}}</h2>
         <p>Places available: {{ competition['numberOfPlaces'] }}</p>
+        <p>Points available : {{ club['points'] }}</p>
+        <p>You are not allowed to reserve more than 12 places</p>
         <form action="/purchasePlaces" method="post">
             <input type="hidden" name="club" value="{{club['name']}}">
             <input type="hidden" name="competition" value="{{competition['name']}}">
-            <label for="places">How many places?</label><input type="number" name="places" id="places" min="1" max="12"/>
+            <label for="places">How many places?</label><input type="number" name="places" id="places" min="1" max="{{max_places}}"/>
             <button type="submit">Book</button>
         </form>
     </body>
