--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Welcome to the GUDLFT Registration Portal!</h1>
+        <a href="{{ url_for('clubs_points_board') }}">Clubs board</a>
         {% with messages = get_flashed_messages()%}
             {% if messages %}
                 <ul>
