--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,7 +5,9 @@
         <title>Summary | GUDLFT Registration</title>
     </head>
     <body>
-        <h2>Welcome, {{ club['email'] }} </h2><a href="{{ url_for('logout') }}">Logout</a>
+        <h1>Welcome, {{ club['email'] }} </h1>
+        <a href="{{ url_for('logout') }}">Logout</a>
+        <a href="{{ url_for('clubs_points_board') }}">Clubs board</a>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <ul>
